Move release branch to the state of master by one single push.
See CHANGELOG.md for details.

Conflicts:
	CHANGELOG.md
	core/build.gradle
	core/src/main/scala/org/apache/spark/rdd/H2OSchemaRDD.scala
	examples/scripts/chicagoCrimeSmallShell.script.scala
	examples/scripts/mlconf_2015_hamSpam.script.scala
	examples/scripts/strata2015.script.scala
	gradle.properties

Cherry-picked from rel-1.5:
git cherry-pick -n 9f958be

+ Upgrade of Spark version to 1.4.1